SyntacticAnalyzer/tests/fail/asignacion-primario-idfaltante.java
class foo {
	ctor (int n1)
	var int n2, n3, n4, n5, n6, n7;
	{
		// id faltante
		= n1;
	
	}
}
